tests/baselines/reference/unusedParameterProperty2(strict=true).errors.txt
unusedParameterProperty2.ts(2,17): error TS7006: Parameter 'used' implicitly has an 'any' type.
unusedParameterProperty2.ts(2,25): error TS6138: Property 'used' is declared but its value is never read.
unusedParameterProperty2.ts(3,13): error TS6133: 'foge' is declared but its value is never read.


==== unusedParameterProperty2.ts (3 errors) ====
    class A {
        constructor(private used) {
                    ~~~~~~~~~~~~
!!! error TS7006: Parameter 'used' implicitly has an 'any' type.
                            ~~~~
!!! error TS6138: Property 'used' is declared but its value is never read.
            let foge = used;
                ~~~~
!!! error TS6133: 'foge' is declared but its value is never read.
        }
    }
    